# Volume_Ascent_Edge_Algorithm

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cpp/: VA_edge.cpp  VAedge.cpp  initial_proj.cpp  ppp_ball.cpp
python/VA/: VA.py  __init__.py
python/VA/example/: generate_and_run.py
python/examples/: generate_and_run.py
